--- a/sinfo/entidades/Views/Home/Plantilla.cshtml
+++ b/sinfo/entidades/Views/Home/Plantilla.cshtml
@@ -29,10 +29,11 @@
     @*<link rel="stylesheet" href="bower_components/jvectormap/jquery-jvectormap.css">*@
     <link href="~/Content/jvectormap/jquery-jvectormap.css" rel="stylesheet" />
     <!-- Date Picker -->
-    <link rel="stylesheet" href="bower_components/bootstrap-datepicker/dist/css/bootstrap-datepicker.min.css">
-
+    @*<link rel="stylesheet" href="bower_components/bootstrap-datepicker/dist/css/bootstrap-datepicker.min.css">*@
+    <link href="~/Content/bootstrap-datepicker/dist/css/bootstrap-datepicker.min.css" rel="stylesheet" />
     <!-- Daterange picker -->
-    <link rel="stylesheet" href="bower_components/bootstrap-daterangepicker/daterangepicker.css">
+    @*<link rel="stylesheet" href="bower_components/bootstrap-daterangepicker/daterangepicker.css">*@
+    <link href="~/Content/bootstrap-daterangepicker/daterangepicker.css" rel="stylesheet" />
     <!-- bootstrap wysihtml5 - text editor -->
     <link rel="stylesheet" href="plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.min.css">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
