--- a/sinfo/entidades/Views/Home/Plantilla.cshtml
+++ b/sinfo/entidades/Views/Home/Plantilla.cshtml
@@ -1,4 +1,9 @@
-﻿<!DOCTYPE html>
+﻿
+@{
+    Layout = null;
+}
+
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8">
@@ -36,6 +41,7 @@
     <link href="~/Content/bootstrap-daterangepicker/daterangepicker.css" rel="stylesheet" />
     <!-- bootstrap wysihtml5 - text editor -->
     <link rel="stylesheet" href="plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.min.css">
+    <link href="~/Content/bootstrap-wysihtml5/bootstrap3-wysihtml5.min.css" rel="stylesheet" />
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -78,7 +84,7 @@
                                             <!-- start message -->
                                             <a href="#">
                                                 <div class="pull-left">
-                                                    <img src="dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
+                                                    <img src="~/img/user2-160x160.jpg" class="img-circle" alt="User Image">
                                                 </div>
                                                 <h4>
                                                     Support Team
@@ -91,7 +97,7 @@
                                         <li>
                                             <a href="#">
                                                 <div class="pull-left">
-                                                    <img src="dist/img/user3-128x128.jpg" class="img-circle" alt="User Image">
+                                                    <img src="~/img/user3-128x128.jpg" class="img-circle" alt="User Image">
                                                 </div>
                                                 <h4>
                                                     AdminLTE Design Team
@@ -103,7 +109,7 @@
                                         <li>
                                             <a href="#">
                                                 <div class="pull-left">
-                                                    <img src="dist/img/user4-128x128.jpg" class="img-circle" alt="User Image">
+                                                    <img src="~/img/user4-128x128.jpg" class="img-circle" alt="User Image">                                                   
                                                 </div>
                                                 <h4>
                                                     Developers
@@ -115,7 +121,7 @@
                                         <li>
                                             <a href="#">
                                                 <div class="pull-left">
-                                                    <img src="dist/img/user3-128x128.jpg" class="img-circle" alt="User Image">
+                                                    <img src="~/img/user3-128x128.jpg" class="img-circle" alt="User Image">
                                                 </div>
                                                 <h4>
                                                     Sales Department
@@ -127,7 +133,7 @@
                                         <li>
                                             <a href="#">
                                                 <div class="pull-left">
-                                                    <img src="dist/img/user4-128x128.jpg" class="img-circle" alt="User Image">
+                                                    <img src="~/img/user4-128x128.jpg" class="img-circle" alt="User Image">
                                                 </div>
                                                 <h4>
                                                     Reviewers
@@ -268,13 +274,13 @@
                         <!-- User Account: style can be found in dropdown.less -->
                         <li class="dropdown user user-menu">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                <img src="dist/img/user2-160x160.jpg" class="user-image" alt="User Image">
+                                <img src="~/img/user2-160x160.jpg" class="user-image" alt="User Image">
                                 <span class="hidden-xs">Alexander Pierce</span>
                             </a>
                             <ul class="dropdown-menu">
                                 <!-- User image -->
                                 <li class="user-header">
-                                    <img src="dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
+                                    <img src="~/img/user2-160x160.jpg" class="img-circle" alt="User Image">
                                     <p>
                                         Alexander Pierce - Web Developer
                                         <small>Member since Nov. 2012</small>
@@ -321,7 +327,7 @@
                 <!-- Sidebar user panel -->
                 <div class="user-panel">
                     <div class="pull-left image">
-                        <img src="dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
+                        <img src="~/img/user2-160x160.jpg" class="img-circle" alt="User Image">
                     </div>
                     <div class="pull-left info">
                         <p>Alexander Pierce</p>
@@ -628,7 +634,7 @@
                             <div class="box-body chat" id="chat-box">
                                 <!-- chat item -->
                                 <div class="item">
-                                    <img src="dist/img/user4-128x128.jpg" alt="user image" class="online">
+                                    <img src="~/img/user4-128x128.jpg" alt="user image" class="online">
                                     <p class="message">
                                         <a href="#" class="name">
                                             <small class="text-muted pull-right"><i class="fa fa-clock-o"></i> 2:15</small>
@@ -652,7 +658,7 @@
                                 <!-- /.item -->
                                 <!-- chat item -->
                                 <div class="item">
-                                    <img src="dist/img/user3-128x128.jpg" alt="user image" class="offline">
+                                    <img src="~/img/user3-128x128.jpg" alt="user image" class="offline">
                                     <p class="message">
                                         <a href="#" class="name">
                                             <small class="text-muted pull-right"><i class="fa fa-clock-o"></i> 5:15</small>
@@ -666,7 +672,7 @@
                                 <!-- /.item -->
                                 <!-- chat item -->
                                 <div class="item">
-                                    <img src="dist/img/user2-160x160.jpg" alt="user image" class="offline">
+                                    <img src="~/img/user2-160x160.jpg" alt="user image" class="offline">
                                     <p class="message">
                                         <a href="#" class="name">
                                             <small class="text-muted pull-right"><i class="fa fa-clock-o"></i> 5:30</small>
@@ -1192,41 +1198,59 @@
     </div>
     <!-- ./wrapper -->
     <!-- jQuery 3 -->
-    <script src="bower_components/jquery/dist/jquery.min.js"></script>
+    @*<script src="bower_components/jquery/dist/jquery.min.js"></script>*@
+    <script src="~/Scripts/jquery/dist/jquery.min.js"></script>
     <!-- jQuery UI 1.11.4 -->
-    <script src="bower_components/jquery-ui/jquery-ui.min.js"></script>
+    @*<script src="bower_components/jquery-ui/jquery-ui.min.js"></script>*@
+    <script src="~/Scripts/jquery-ui/jquery-ui.min.js"></script>
     <!-- Resolve conflict in jQuery UI tooltip with Bootstrap tooltip -->
     <script>
   $.widget.bridge('uibutton', $.ui.button);
     </script>
     <!-- Bootstrap 3.3.7 -->
-    <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+    @*<script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>*@
+    <script src="~/Content/bootstrap/dist/js/bootstrap.min.js"></script>>
     <!-- Morris.js charts -->
-    <script src="bower_components/raphael/raphael.min.js"></script>
-    <script src="bower_components/morris.js/morris.min.js"></script>
+    @*<script src="bower_components/raphael/raphael.min.js"></script>*@
+    <script src="~/Scripts/raphael/raphael.min.js"></script>
+    @*<script src="bower_components/morris.js/morris.min.js"></script>*@
+    <script src="~/Content/morris.js/morris.min.js"></script>
     <!-- Sparkline -->
-    <script src="bower_components/jquery-sparkline/dist/jquery.sparkline.min.js"></script>
+    @*<script src="bower_components/jquery-sparkline/dist/jquery.sparkline.min.js"></script>*@
+    <script src="~/Scripts/jquery-sparkline/dist/jquery.sparkline.min.js"></script>
     <!-- jvectormap -->
-    <script src="plugins/jvectormap/jquery-jvectormap-1.2.2.min.js"></script>
-    <script src="plugins/jvectormap/jquery-jvectormap-world-mill-en.js"></script>
+    @*<script src="plugins/jvectormap/jquery-jvectormap-1.2.2.min.js"></script>*@
+    <script src="~/Scripts/jvectormap/jquery-jvectormap-1.2.2.min.js"></script>
+    @*<script src="plugins/jvectormap/jquery-jvectormap-world-mill-en.js"></script>*@
+    <script src="~/Scripts/jvectormap/jquery-jvectormap-world-mill-en.js"></script>
     <!-- jQuery Knob Chart -->
-    <script src="bower_components/jquery-knob/dist/jquery.knob.min.js"></script>
+    @*<script src="bower_components/jquery-knob/dist/jquery.knob.min.js"></script>*@
+    <script src="~/Scripts/jquery-knob/dist/jquery.knob.min.js"></script>
     <!-- daterangepicker -->
-    <script src="bower_components/moment/min/moment.min.js"></script>
-    <script src="bower_components/bootstrap-daterangepicker/daterangepicker.js"></script>
+    @*<script src="bower_components/moment/min/moment.min.js"></script>*@
+    <script src="~/Scripts/moment/min/moment.min.js"></script>
+    @*<script src="bower_components/bootstrap-daterangepicker/daterangepicker.js"></script>*@
+    <script src="~/Content/bootstrap-daterangepicker/daterangepicker.js"></script>
     <!-- datepicker -->
-    <script src="bower_components/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js"></script>
+    @*<script src="bower_components/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js"></script>*@
+    <script src="~/Content/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js"></script>
     <!-- Bootstrap WYSIHTML5 -->
-    <script src="plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.all.min.js"></script>
+    @*<script src="plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.all.min.js"></script>*@
+    <script src="~/Content/bootstrap-wysihtml5/bootstrap3-wysihtml5.all.min.js"></script>
     <!-- Slimscroll -->
-    <script src="bower_components/jquery-slimscroll/jquery.slimscroll.min.js"></script>
+    @*<script src="bower_components/jquery-slimscroll/jquery.slimscroll.min.js"></script>*@
+    <script src="~/Scripts/jquery-slimscroll/jquery.slimscroll.min.js"></script>
     <!-- FastClick -->
-    <script src="bower_components/fastclick/lib/fastclick.js"></script>
+    @*<script src="bower_components/fastclick/lib/fastclick.js"></script>*@
+    <script src="~/Scripts/fastclick/lib/fastclick.js"></script>
     <!-- AdminLTE App -->
-    <script src="dist/js/adminlte.min.js"></script>
+    @*<script src="dist/js/adminlte.min.js"></script>*@
+    <script src="~/Scripts/js/adminlte.min.js"></script>
     <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
-    <script src="dist/js/pages/dashboard.js"></script>
+    @*<script src="dist/js/pages/dashboard.js"></script>*@
+    <script src="~/Scripts/js/pages/dashboard.js"></script>
     <!-- AdminLTE for demo purposes -->
-    <script src="dist/js/demo.js"></script>
+    @*<script src="dist/js/demo.js"></script>*@
+    <script src="~/Scripts/js/demo.js"></script>
 </body>
 </html>
